# Eric

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflow/: deploy_mkdocs.yml
.github/workflows/: deploy_mkdocs.yml
configure/advanced/fastapi/: index.html
configure/database/generic/: index.html
configure/database/mysql/: index.html
configure/main/: index.html
credits/: index.html
deploy/linux/: index.html
deploy/windows/: index.html
docs/: credits.md  faq.md  index.md  tree.md
docs/configure/: main.md
docs/configure/advanced/: fastapi.md
docs/configure/database/: generic.md  mysql.md
docs/deploy/: linux.md  windows.md
docs/feature/: console.md  fastapi.md
docs/module/: file_server.md  help.md  manager.md  utilities.md  utility.md
faq/: index.html
feature/console/: index.html
feature/fastapi/: index.html
module/file_server/: index.html
module/help/: index.html
module/manager/: index.html
module/utilities/: index.html
module/utility/: index.html
script/: lock.py  version.py
script/migrate/: 0_1_5.py  __init__.py
search/: search_index.json
tree/: index.html
