[project]
name = "Eric"
version = "0.1.7"
description = ""
authors = [
    { name = "nullqwertyuiop", email = "null@member.fsf.org" },
]
dependencies = [
    "graia-ariadne<1.0.0,>=0.10.3",
    "graia-saya<1.0.0,>=0.0.17",
    "graia-scheduler<1.0.0,>=0.1.4",
    "graiax-playwright<1.0.0,>=0.2.1",
    "typing-extensions<5.0.0,>=4.4.0",
    "sqlalchemy>=2.0.0",
    "aiomysql<1.0.0,>=0.1.1",
    "aiosqlite<1.0.0,>=0.18.0",
    "aiohttp<4.0.0,>=3.8.3",
    "kayaku<1.0.0,>=0.5.2",
    "fastapi<1.0.0,>=0.89.1",
    "uvicorn<1.0.0,>=0.20.0",
    "Pillow<10.0.0,>=9.4.0",
    "numpy<2.0.0,>=1.24.1",
    "graiax-fastapi<1.0.0,>=0.2.1",
    "GitPython<4.0.0,>=3.1.30",
    "psutil<6.0.0,>=5.9.4",
    "aiofiles<23.0.0,>=22.1.0",
    "prompt-toolkit<4.0.0,>=3.0.36",
    "lxml<5.0.0,>=4.9.2",
    "graiax-text2img-playwright<1.0.0,>=0.3.0",
    "graiax-shortcut<1.0.0,>=0.2.1",
    "websockets<11.0,>=10.4",
    "packaging<24.0,>=23.0",
    "textual>=0.10.1",
    "arclet-alconna-graia>=0.12.0",
    "arclet-alconna-ariadne>=0.12.0",
    "rich>=13.3.3",
]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0 license" }

[project.urls]

[project.optional-dependencies]
dev = [
    "black>=22.12.0",
    "pre-commit>=2.21.0",
    "textual[dev]>=0.10.1",
]
docs = [
    "mkdocs-material>=9.0.6",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

[tool.pdm.scripts]
start = "python main.py"
docs = "mkdocs serve"
