[project]
name = "Eric"
version = "0.1.10"
description = ""
authors = [
    { name = "nullqwertyuiop", email = "null@member.fsf.org" },
]
dependencies = [
    "graia-ariadne>=0.11.7",
    "graia-saya>=0.0.18",
    "graia-scheduler>=0.2.0",
    "graiax-playwright>=0.2.7",
    "typing-extensions>=4.7.1",
    "sqlalchemy>=2.0.20",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.8.5",
    "kayaku>=0.5.2",
    "fastapi>=0.101.1",
    "uvicorn>=0.23.2",
    "Pillow>=10.0.0",
    "numpy>=1.25.2",
    "graiax-fastapi>=0.3.1",
    "GitPython>=3.1.32",
    "psutil>=5.9.5",
    "aiofiles>=23.2.1",
    "prompt-toolkit>=3.0.39",
    "lxml>=4.9.3",
    "graiax-text2img-playwright>=0.4.2",
    "graiax-shortcut>=0.3.0",
    "websockets>=11.0.3",
    "packaging>=23.1",
    "textual>=0.33.0",
    "arclet-alconna-graia>=0.15.0",
    "arclet-alconna-ariadne>=0.15.0",
    "rich>=13.5.2",
]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0 license" }

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "textual>=0.33.0",
]
docs = [
    "mkdocs-material>=9.1.21",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

[tool.pdm.scripts]
start = "python main.py"
docs = "mkdocs serve"
